--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ function handleComplete(evt,comp) {
        <header>
 		   
        <div class="logoHolder">
-            <h1><a href="#!/pageGallery" id="logo">logo</a></h1>
+            <h1><a href="https://mascotacool.github.io/principal" id="logo">logo</a></h1>
        </div>
         </header>
 	 	
