--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@ function handleComplete(evt,comp) {
             <ul>
                 <li>
                     <div class="picHold"><a class="pic" rel="Appendix" href="images/alimentogato.jpg"><span class="zoomSp"></span><img src="images/galleryIcon1.jpg" alt=""></a></div>
-                    <div class="picHold"><a class="pic" rel="Appendix" href="images/imageblankcompras.png"><span class="zoomSp"></span><img src="images/galleryIcon2.jpg" alt=""></a></div>
-                    <div class="picHold"><a class="pic" rel="Appendix" href="images/imageblankcompras.png"><span class="zoomSp"></span><img src="images/galleryIcon3.jpg" alt=""></a></div>
+                    <div class="picHold"><a class="pic" rel="Appendix" href="images/repositorio.png"><span class="zoomSp"></span><img src="images/galleryIcon2.jpg" alt=""></a></div>
+                    <div class="picHold"><a class="pic" rel="Appendix" href="images/repositorio.png"><span class="zoomSp"></span><img src="images/galleryIcon3.jpg" alt=""></a></div>
                 </li>
                 <li>
                     <div class="picHold"><a class="pic" rel="Appendix" href="images/collageperros.jpg"><span class="zoomSp"></span><img src="images/galleryIcon4.jpg" alt=""></a></div>
@@ -139,13 +139,13 @@ function handleComplete(evt,comp) {
                 </li>
                 <li>
                     <div class="picHold"><a class="pic" rel="Appendix" href="images/collagepeluqueria.jpg"><span class="zoomSp"></span><img src="images/galleryIcon7.jpg" alt=""></a></div>
-                    <div class="picHold"><a class="pic" rel="Appendix" href="images/imageblankcompras.png"><span class="zoomSp"></span><img src="images/galleryIcon8.jpg" alt=""></a></div>
+                    <div class="picHold"><a class="pic" rel="Appendix" href="images/repositorio.png"><span class="zoomSp"></span><img src="images/galleryIcon8.jpg" alt=""></a></div>
                     <div class="picHold"><a class="pic" rel="Appendix" href="images/veterinariasmarzo.png"><span class="zoomSp"></span><img src="images/galleryIcon9.jpg" alt=""></a></div>
                 </li>
                 <li>
-                    <div class="picHold"><a class="pic" rel="Appendix" href="images/imageblankcompras.png"><span class="zoomSp"></span><img src="images/galleryIcon1.jpg" alt=""></a></div>
-                    <div class="picHold"><a class="pic" rel="Appendix" href="images/imageblankcompras.png"><span class="zoomSp"></span><img src="images/galleryIcon2.jpg" alt=""></a></div>
-                    <div class="picHold"><a class="pic" rel="Appendix" href="images/imageblankcompras.png"><span class="zoomSp"></span><img src="images/galleryIcon3.jpg" alt=""></a></div>
+                    <div class="picHold"><a class="pic" rel="Appendix" href="images/repositorio.png"><span class="zoomSp"></span><img src="images/galleryIcon1.jpg" alt=""></a></div>
+                    <div class="picHold"><a class="pic" rel="Appendix" href="images/repositorio.png"><span class="zoomSp"></span><img src="images/galleryIcon2.jpg" alt=""></a></div>
+                    <div class="picHold"><a class="pic" rel="Appendix" href="images/repositorio.png"><span class="zoomSp"></span><img src="images/galleryIcon3.jpg" alt=""></a></div>
                 </li>
                 <li>
                     <div class="picHold"><a class="pic" rel="Appendix" href="images/collageperros.jpg"><span class="zoomSp"></span><img src="images/galleryIcon4.jpg" alt=""></a></div>
@@ -154,7 +154,7 @@ function handleComplete(evt,comp) {
                 </li>
                 <li>
                     <div class="picHold"><a class="pic" rel="Appendix" href="images/collagepeluqueria.jpg"><span class="zoomSp"></span><img src="images/galleryIcon7.jpg" alt=""></a></div>
-                    <div class="picHold"><a class="pic" rel="Appendix" href="images/imageblankcompras.png"><span class="zoomSp"></span><img src="images/galleryIcon8.jpg" alt=""></a></div>
+                    <div class="picHold"><a class="pic" rel="Appendix" href="images/repositorio.png"><span class="zoomSp"></span><img src="images/galleryIcon8.jpg" alt=""></a></div>
                     <div class="picHold"><a class="pic" rel="Appendix" href="images/veterinariasmarzo.png"><span class="zoomSp"></span><img src="images/galleryIcon9.jpg" alt=""></a></div>
                 </li>
                <li>
