--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ function handleComplete(evt,comp) {
                                     <div class="col4 magRight2">
                                         <h3><a class="_link3" href="#">Baño y Peluquería</a></h3>
                                         <p>Su pelaje es factor importante, lo cuidamos, lo mimamos, te damos las mejores recomendaciones para su cuidado y mantenimiento. </p>
-										<h3><a class="_link3" href="https://mascotacool.github.io/preguntasfrecuentes/">Preguntas Frecuentes</a></h3>
+										<h3><a class="_link3" href="https://mascotacool.github.io/preguntasfrecuentes/" target="_blank rel="nofollow">Preguntas Frecuentes</a></h3>
                                     </div>
                                     <div class="col4">
                                         <h3><a class="_link3" href="#">Recomendaciones para tenencia responsable de mascotas</a></h3>
