--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ function handleComplete(evt,comp) {
 								</a>
 								</li>
 								<li>
-								<a href="https://mascotacool2020.github.io/inicio"><img src="images/precios.png" alt="">
+								<a href="https://mascotacool2020.github.io/inicio" target="_blank" rel="nofollow"><img src="images/precios.png" alt="">
 								</a>
 								</li>
 								<li>
