--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ function handleComplete(evt,comp) {
 					<p> Encuentra el perfil del creador de la página aquí:<div class="col1 padBot2">
                                     <div class="col3 bord1 magRight1">
                                         <ul class="_list1">
-                                            <li><a href="https://mascotacool2020.github.io/inicio" target="_blank rel="nofollow">C.VITAE del Creador del sitio Web
+                                            <li><a href="https://mascotacool.github.io/VITAEf.aguirre/" target="_blank rel="nofollow">C.VITAE del Creador del sitio Web
 												</a>
 											</li>
                                         	<li><a href="#">J.F. Aguirre Tamayo
