--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ function handleComplete(evt,comp) {
                                             <li><a href="https://mascotacool.github.io/VITAEf.aguirre/" target="_blank rel="nofollow">C.VITAE del Creador del sitio Web
 												</a>
 											</li>
-                                        	<li><a href="#">J.F. Aguirre Tamayo
+                                        	<li><a href="https://mascotacool.github.io/VITAEf.aguirre/">J.F. Aguirre Tamayo
 												</a>
 											</li></div></div></a></p><p>Fabricio Aguirre (CurricullumVITAE).</a></p>
                                     </div>
