--- a/index.html
+++ b/index.html
@@ -416,7 +416,21 @@ function handleComplete(evt,comp) {
                                        
                                         <p class="padBot4">...</p>
                                         <p class="padBot4">La empresa abre sus puertas en plena pandemia, junio 2020, cuando la situación se encontraba en un estado de alta tensión.</p>
-                                        <p>Consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+                                        <p>HISTORIA
+ Documento Interactivo.
+
+
+Rondaban los años novecientos o dos mil y tantos. No sé, si no me falla la memoria, que de seguro si, pero haré mi mayor esfuerzo.
+Mascota Cool nace con la idea de bajar los costos personales y de la familia con respecto al alimento de nuestros tres mejores amigos: Balto, Baloo y Jana. Por cierto, estoy hablando de tres perritXs. (no se si seguir con esto del lenguaje inclusive). 
+Siguiendo.  La vida se torna difícil de manera que el dinero no llega. Es que ya no hay dinero como antes, cuentan. 
+Bueno, eso me contaban, eso me cuentan a diario.  
+De seguro esto va a mejorar dicen y siguen diciendo, pero es que no ponemos las manos en acción, olvidando nuestras pasiones y dejando nuestro ego de lado, que es bien oscuro, según me he ido enterando. 
+La empresa nace también con un solo ideal. Ayudar a los más pequeños. Pero ayudar de verdad. Con precios baratos, esforzándonos por dar una mejor atención tanto al tutor, cómo a su mascota, su amigo, su compañero o compañera de vida. 
+Insumos es lo que necesitamos, pero bien trabajados, ganados con el sudor de nuestras frentes, no con la mirada gacha del pretencioso, es por eso que nace la idea de una empresa que brinde sus productos y servicios al bienestar de nuestros ángeles. Ellos que sin decirnos nada, nos lo demuestran todo y nos dictan con sus hermosos actos, lo que está bien, lo que está mal, lo que nos conviene, lo que no. 
+Debemos ser guardianes protectores vigilantes de nuestros seres amados, sin desvalorizar, sin mal educar, ni mal criar. Ser firmes acompañantes de estos seres que les pertenecemos, porque son ellos que se entregan más por nosotros, que nosotros por ellos. 
+Ese es el motor por el que Mascota Cool, Baño y Peluquería se mantiene día a día por buscar un punto de equilibrio entre elegancia, belleza y sobre todo cumplimiento con la armonía intrínseca de cada individuo. 
+Buscamos un mejor y venidero que hacer para con nuestros estimados clientes, asegurándoles un acabado profesional en cuanto a parámetros técnicos correspondientes a la raza de su perrito o gatito. 
+.</p>
                                     </div>
                                 </div> 
                             </div>
