--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ function handleComplete(evt,comp) {
 								</a>
 								</li>
                                 <li>
-								<a href="https://instagram.com" target="_blank" rel="nofollow"><img src="images/instagramico.png" alt="">
+								<a href="https://www.instagram.com/p/CNIwgkEp_of" target="_blank" rel="nofollow"><img src="images/instagramico.png" alt="">
 								</a>
 								</li>
 								<li>
