--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@ function handleComplete(evt,comp) {
                                        
                                         <p class="padBot4">Nuestra Misión es encontrar el punto exacto de equilibrio entre belleza y elegancia acordes a estandares raciales tanto caninos como felinos.</p>
                                         <p class="padBot4">...</p>
-                                        <p>La Visión que tenemos es que logremos comprender la interacción que tenemos con nuestras máscotas, qué podamos adoptar costumbres de sociabilización con nuestros amigos y logrémos desarrollo comunitario para que todos tengamos armonía.</p>
+                                        <p>La Visión que tenemos es lograr comprender la interacción que tenemos con nuestras mascotas, qué podamos adoptar costumbres de sociabilización con nuestros amigos e integremos desarrollo comunitario para que todos tengamos armonía.</p>
 					<div id="animation_container" style="background-color:rgba(255, 255, 255, 1.00); width:550px; height:95px">
 					<canvas id="canvas" width="550" height="95" style="position: absolute; display: block; background-color:rgba(255, 255, 255, 1.00);"></canvas>
 					<div id="dom_overlay_container" style="pointer-events:none; overflow:hidden; width:550px; height:95px; position: absolute; left: 0px; top: 0px; display: block;">
