--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ function handleComplete(evt,comp) {
 								</a>
 								</li>
 
-								<p><a class="color4"#LLÁMANOS!! cell:</a></p><p>telf: +593-998741295</p>        
+								<p><a class="color4"</a></p><p>telf: +593-998741295</p>        
                             </ul>
     	  </div>
  </div>
