--- a/index.html
+++ b/index.html
@@ -200,16 +200,16 @@ function handleComplete(evt,comp) {
                                 <div class="col1 padBot2">
                                     <div class="col3 bord1 magRight1">
                                         <ul class="_list1">
-                                            <li><a href="#">Recetas en la WEB acondicionadores</a></li>
-                                        <li><a href="#">wEBINAR  Tablas con función marque</a></li>
-                                            <li><a href="#">Duo dolores et sed diam rebum</a></li>
+                                            <li><a href="#">Manejo y Tenencia Responsable de Mascotas</a></li>
+                                        <li><a href="#">Campañas Veterinarias a Bajo Costo</a></li>
+                                            <li><a href="#">Calendarios de Vacunaciónes Recomendadas</a></li>
                                         </ul>
                                     </div>
                                     <div class="col3">
                                         <ul class="_list1">
-                                            <li><a href="#">Ipsum dolor sit amet consetetur</a></li>
-                                            <li><a href="#">Sadipscing elitr clitasdd diam nonumy</a></li>
-                                            <li><a href="#">At vero eos et accusam et justo</a></li>
+                                            <li><a href="#">Recomendaciones Alimenticias, Diseño de Dietas Adecuadas</a></li>
+                                            <li><a href="#">Adiestramiento y Corrección Vigilada</a></li>
+                                            <li><a href="#">Certificados de Vacunaciones</a></li>
 					</ul>
                                     </div>
                                 </div>
