--- a/index.html
+++ b/index.html
@@ -200,15 +200,15 @@ function handleComplete(evt,comp) {
                                 <div class="col1 padBot2">
                                     <div class="col3 bord1 magRight1">
                                         <ul class="_list1">
-                                            <li><a href="#">Manejo y Tenencia Responsable de Mascotas</a></li>
-                                        <li><a href="#">Campañas Veterinarias a Bajo Costo</a></li>
-                                            <li><a href="#">Calendarios de Vacunaciónes Recomendadas</a></li>
+                                            <li><a href="#">Manejo y Tenencia Responsable</a></li>
+                                        <li><a href="#">Campañas Veterinarias</a></li>
+                                            <li><a href="#">Calendarios de Vacunaciónes</a></li>
                                         </ul>
                                     </div>
                                     <div class="col3">
                                         <ul class="_list1">
-                                            <li><a href="#">Recomendaciones Alimenticias, Diseño de Dietas Adecuadas</a></li>
-                                            <li><a href="#">Adiestramiento y Corrección Vigilada</a></li>
+                                            <li><a href="#">Recomendaciones Alimenticias</a></li>
+                                            <li><a href="#">Adiestramiento</a></li>
                                             <li><a href="#">Certificados de Vacunaciones</a></li>
 					</ul>
                                     </div>
