--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ function handleComplete(evt,comp) {
 										<h3><a class="_link3" href="https://mascotacool.github.io/preguntasfrecuentes/" target="_blank rel="nofollow">Preguntas Frecuentes</a></h3>
                                     </div>
                                     <div class="col4">
-                                        <h3><a class="_link3" href="#">Recomendaciones para tenencia responsable de mascotas</a></h3>
+                                        <h3><a class="_link3" href="#">Tenencia responsable</a></h3>
                                         <p>Es deber de nosotros como sus guardianes, conocer la manera óptima y más adecuada de cómo mantener responsablemente a nuestras mascotas.</p>
                                     </div>
                                 </div>
