--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ function handleComplete(evt,comp) {
 					</ul>
                                     </div>
                                 </div>
-                                    <a class="moreButton" href="#!/pageMore">Leer ...</a>
+                                    <a class="moreButton" href="https://mascotacool.github.io/principal">Leer ...</a>
                                 
                             </div>
                        </div>	
